--- a/project-4-notebook.Rmd
+++ b/project-4-notebook.Rmd
@@ -44,6 +44,7 @@ Below, we read and clean a dataset by passing an argument to read_csv.
 ```{r}
 require(tidyverse)
 require(dplyr)
+require(shiny)
 powerBall <- read_csv("preCensusMergeData.csv", 
 col_types = cols(
   fy11 = col_number(),
@@ -76,6 +77,7 @@ We then upload this file to data.world so we can join it with the census data.
 ## **Analysis**
 
 First, we have to import the newly joined dataset from data.world into this notebook:
+And then we mutate the data to add a poverty ratio, which is the population living in poverty divided by the total population
 
 ```{r}
 
@@ -91,13 +93,42 @@ sqlQuery <- data.world::qry_sql("with q1 as(SELECT powerball.county, powerball.s
 
 # Import the data set returned by the query into a local data frame
 powerBallCensusMerged <- data.world::query(sqlQuery, dataset=dataset_key)
+powerBallCensusMerged <- powerBallCensusMerged %>% dplyr::mutate(poverty_ratio = population_living_in_poverty/total_population)
 
 ```
 
+```{r}
+  renderPlot(
+  head(powerBallCensusMerged) %>% tidyr::gather(salesfy11:salesfy14, key="year", value="powerball_sales", na.rm=TRUE) %>%
+  ggplot(aes(x=year, y=powerball_sales, colour=county, group=county)) + geom_point() + geom_line())
+```
 
+Here we use the cumulative distribution function to select the counties with a poverty ratio in the top 10% and view their powerball sales from 2011-2014
+```{r}
+  cume_dist_df <- powerBallCensusMerged %>% dplyr::mutate(percentile = cume_dist(poverty_ratio)) %>% 
+  dplyr::filter(percentile > 0.9) %>% dplyr::arrange(desc(percentile))
+  renderPlot(
+  cume_dist_df %>% tidyr::gather(salesfy11:salesfy14, key="year", value="powerball_sales", na.rm=TRUE) %>%
+  ggplot(aes(x=year, y=powerball_sales, colour=county, group=county)) + geom_point() + geom_line())
+```
 
+Here we use the summarise function and ntile function to split our data into three buckets (3 being the counties with the highest povery ratio and 1 being the ones with the lowest ratio.) Then we use a mutate group_by to groub by this ntile column we have created. Then we aggregate and display each bucket's powerball sales from 2011-2014
+```{r}
+  ntile_df <- powerBallCensusMerged %>% dplyr::mutate(ntile_poverty_ratio = ntile(poverty_ratio, 3))
+  ntile_tbl_df <- ntile_df %>% tidyr::gather(salesfy11:salesfy14, key="year", value="powerball_sales", na.rm=TRUE) %>%
+  dplyr::group_by(year, ntile_poverty_ratio) %>% dplyr::summarise(sum_sales = sum(powerball_sales))
+  renderPlot(
+    ggplot(ntile_tbl_df, aes(x=year, y=sum_sales, colour=ntile_poverty_ratio, group=ntile_poverty_ratio)) + geom_point() + geom_line())
+```
 
+Here we use the percent_rank function to only view the poorest 15% counties. Then we use the lag function to determine the slope for each year's powerball sales.
+```{r}
+  lag_df <- powerBallCensusMerged %>% dplyr::mutate(rank = percent_rank(poverty_ratio)) %>% dplyr::filter(rank >0.85) %>%
+  tidyr::gather(salesfy11:salesfy14, key="year", value="powerball_sales", na.rm=TRUE) %>%
+  dplyr::group_by(county) %>%
+  dplyr::arrange(county, year)
 
-
-
-
+  lag_tbl_df <- lag_df %>% dplyr::mutate(slope=powerball_sales-lag(powerball_sales)) %>%
+  dplyr::select(county, year, powerball_sales, poverty_ratio, slope)
+  renderTable(View(lag_tbl_df))
+```
